logs/pyspatiotemporalgeom.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyspatiotemporalgeom'...
Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/componentMovingRegion.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/componentMovingRegion.py", line 204
    print '1'
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyspatiotemporalgeom/examples'...
Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/examples/gen.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/examples/gen.py", line 32
    print 'usage: ', sys.argv[0],'  numStartSegs minBound maxBound outputHexFile'
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/examples/intervalRegTest.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/examples/intervalRegTest.py", line 34
    print 'length of input regions (number of halfsegments)'
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/examples/mapLibraryExamples.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/examples/mapLibraryExamples.py", line 71
    print r1
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/examples/tempAggExample.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/examples/tempAggExample.py", line 57
    print"points with maximum duration,segments that are not part of cycles,cycles with maximum duration =",r
                                                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/examples/temporalAggregate.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/examples/temporalAggregate.py", line 52
    print 'interpolating regions'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/examples/test.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/examples/test.py", line 32
    print 'length of input regions (number of halfsegments) and their intersection'
                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/examples/triangleTest.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/examples/triangleTest.py", line 48
    print 'should get 2 points based on', seg1, tri1
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/intervalRegion.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/intervalRegion.py", line 233
    print '\n\nINTERPOINTS\n', intersectionPoints
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/region.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/region.py", line 321
    print zip( sr, la, lb)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/structureRegion.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/structureRegion.py", line 426
    print theLine
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyspatiotemporalgeom/utilities'...
Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/hsegLibrary.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/hsegLibrary.py", line 486
    print 'start: ', startHseg
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/regionOverlayGrid.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/regionOverlayGrid.py", line 486
    print 'result r1'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/segLibrary.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/segLibrary.py", line 145
    print 'end'
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/temporalAggregate.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/temporalAggregate.py", line 219
    print 'List is empty. Exiting...'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/triangleLibrary.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/triangleLibrary.py", line 358
    print 'Error, expected an intersection point and didn\'t get one'
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/zTestInter.py'...
***   File "./lib/python3.5/site-packages/pyspatiotemporalgeom/utilities/zTestInter.py", line 47
    print 'num used cells:', len( usedCells)
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyspatiotemporalgeom-0.2.7.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
